change the title

--- a/Fantasy Football Squad with Python Pulp.ipynb
+++ b/Fantasy Football Squad with Python Pulp.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimizing Fantasy Football Squad"
+    "# Optimizing Fantasy Football Squad\n",
+    "## Linear Programming with Python PuLP <br /><br />"
    ]
   },
   {
