Titanic Kaggle project

--- a/FantasyFootballwithPythonPulp.ipynb
+++ b/FantasyFootballwithPythonPulp.ipynb
@@ -85,9 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -110,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -131,10 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#we don't want players that possibly will not play next round.\n",
@@ -143,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -155,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -176,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -187,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -250,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -290,14 +286,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>309</th>\n",
-       "      <td>388</td>\n",
-       "      <td>6</td>\n",
-       "      <td>95</td>\n",
-       "      <td>Bamidele</td>\n",
-       "      <td>Alli</td>\n",
-       "      <td>225</td>\n",
-       "      <td>0</td>\n",
+       "      <th>233</th>\n",
+       "      <td>234</td>\n",
+       "      <td>14</td>\n",
+       "      <td>101</td>\n",
+       "      <td>Mohamed</td>\n",
+       "      <td>Salah</td>\n",
+       "      <td>154</td>\n",
+       "      <td>8.4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -305,44 +301,29 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>312</th>\n",
-       "      <td>394</td>\n",
-       "      <td>6</td>\n",
-       "      <td>125</td>\n",
-       "      <td>Harry</td>\n",
-       "      <td>Kane</td>\n",
-       "      <td>224</td>\n",
+       "      <th>246</th>\n",
+       "      <td>247</td>\n",
+       "      <td>43</td>\n",
+       "      <td>88</td>\n",
+       "      <td>Raheem</td>\n",
+       "      <td>Sterling</td>\n",
+       "      <td>136</td>\n",
+       "      <td>8.3</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>51</td>\n",
-       "      <td>91</td>\n",
-       "      <td>75</td>\n",
-       "      <td>Joshua</td>\n",
-       "      <td>King</td>\n",
-       "      <td>178</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>98</td>\n",
+       "      <th>99</th>\n",
+       "      <td>100</td>\n",
        "      <td>8</td>\n",
-       "      <td>65</td>\n",
-       "      <td>Gary</td>\n",
-       "      <td>Cahill</td>\n",
-       "      <td>178</td>\n",
-       "      <td>0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>Marcos</td>\n",
+       "      <td>Alonso</td>\n",
+       "      <td>110</td>\n",
+       "      <td>6.9</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -350,18 +331,123 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>74</td>\n",
-       "      <td>90</td>\n",
-       "      <td>50</td>\n",
-       "      <td>Tom</td>\n",
-       "      <td>Heaton</td>\n",
-       "      <td>149</td>\n",
+       "      <th>96</th>\n",
+       "      <td>97</td>\n",
+       "      <td>8</td>\n",
+       "      <td>69</td>\n",
+       "      <td>César</td>\n",
+       "      <td>Azpilicueta</td>\n",
+       "      <td>107</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234</th>\n",
+       "      <td>235</td>\n",
+       "      <td>14</td>\n",
+       "      <td>89</td>\n",
+       "      <td>Roberto</td>\n",
+       "      <td>Firmino</td>\n",
+       "      <td>106</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>248</td>\n",
+       "      <td>43</td>\n",
+       "      <td>82</td>\n",
+       "      <td>David</td>\n",
+       "      <td>Silva</td>\n",
+       "      <td>105</td>\n",
+       "      <td>5.3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>245</td>\n",
+       "      <td>43</td>\n",
+       "      <td>63</td>\n",
+       "      <td>Nicolás</td>\n",
+       "      <td>Otamendi</td>\n",
+       "      <td>102</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>260</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59</td>\n",
+       "      <td>David</td>\n",
+       "      <td>de Gea</td>\n",
+       "      <td>101</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>70</td>\n",
+       "      <td>36</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Pascal</td>\n",
+       "      <td>Groß</td>\n",
+       "      <td>96</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>267</td>\n",
+       "      <td>1</td>\n",
+       "      <td>68</td>\n",
+       "      <td>Antonio</td>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>94</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500</th>\n",
+       "      <td>501</td>\n",
+       "      <td>57</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Richarlison</td>\n",
+       "      <td>de Andrade</td>\n",
+       "      <td>92</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -369,63 +455,82 @@
        "</div>"
       ],
       "text/plain": [
-       "      id  team_code  now_cost first_name second_name  total_points  form  \\\n",
-       "309  388          6        95   Bamidele        Alli           225     0   \n",
-       "312  394          6       125      Harry        Kane           224     0   \n",
-       "35    51         91        75     Joshua        King           178     0   \n",
-       "76    98          8        65       Gary      Cahill           178     0   \n",
-       "54    74         90        50        Tom      Heaton           149     0   \n",
+       "      id  team_code  now_cost   first_name  second_name  total_points  form  \\\n",
+       "233  234         14       101      Mohamed        Salah           154   8.4   \n",
+       "246  247         43        88       Raheem     Sterling           136   8.3   \n",
+       "99   100          8        71       Marcos       Alonso           110   6.9   \n",
+       "96    97          8        69        César  Azpilicueta           107   4.4   \n",
+       "234  235         14        89      Roberto      Firmino           106   7.7   \n",
+       "247  248         43        82        David        Silva           105   5.3   \n",
+       "244  245         43        63      Nicolás     Otamendi           102   6.6   \n",
+       "259  260          1        59        David       de Gea           101   3.9   \n",
+       "69    70         36        59       Pascal         Groß            96   3.3   \n",
+       "266  267          1        68      Antonio     Valencia            94   3.3   \n",
+       "500  501         57        65  Richarlison   de Andrade            92   2.9   \n",
        "\n",
        "     element_type_def  element_type_fwd  element_type_gkp  element_type_mid  \\\n",
-       "309                 0                 0                 0                 1   \n",
-       "312                 0                 1                 0                 0   \n",
-       "35                  0                 1                 0                 0   \n",
-       "76                  1                 0                 0                 0   \n",
-       "54                  0                 0                 1                 0   \n",
+       "233                 0                 0                 0                 1   \n",
+       "246                 0                 0                 0                 1   \n",
+       "99                  1                 0                 0                 0   \n",
+       "96                  1                 0                 0                 0   \n",
+       "234                 0                 1                 0                 0   \n",
+       "247                 0                 0                 0                 1   \n",
+       "244                 1                 0                 0                 0   \n",
+       "259                 0                 0                 1                 0   \n",
+       "69                  0                 0                 0                 1   \n",
+       "266                 1                 0                 0                 0   \n",
+       "500                 0                 0                 0                 1   \n",
        "\n",
        "     chosen  \n",
-       "309     1.0  \n",
-       "312     1.0  \n",
-       "35      1.0  \n",
-       "76      1.0  \n",
-       "54      1.0  "
+       "233     1.0  \n",
+       "246     1.0  \n",
+       "99      1.0  \n",
+       "96      1.0  \n",
+       "234     1.0  \n",
+       "247     1.0  \n",
+       "244     1.0  \n",
+       "259     1.0  \n",
+       "69      1.0  \n",
+       "266     1.0  \n",
+       "500     1.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_chosen1 = doOptimizePlayers(df,410,1,1,1,2)\n",
+    "df_chosen1 = doOptimizePlayers(df,815,1,4,5,1)\n",
     "df_chosen1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "410L"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "814\n",
+      "1203\n"
+     ]
     }
    ],
    "source": [
     "#See if we've used up all 410, we reuse the money if there's some left\n",
-    "df_chosen1.now_cost.sum()"
+    "print df_chosen1.now_cost.sum()\n",
+    "print df_chosen1.total_points.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 163,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#We don't want the players we've chosen in the table anymore\n",
@@ -441,49 +546,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      id  team_code  now_cost first_name  second_name  total_points  form  \\\n",
-      "308  387          6        95  Christian      Eriksen           218     0   \n",
-      "78   100          8        70     Marcos       Alonso           177     0   \n",
-      "75    97          8        65      César  Azpilicueta           170     0   \n",
-      "20    34         91        50    Charlie      Daniels           134     0   \n",
-      "354  448         21        60     Robert    Snodgrass           133     0   \n",
-      "325  409         57        55    Etienne       Capoue           131     0   \n",
+      "      id  team_code  now_cost first_name second_name  total_points  form  \\\n",
+      "351  352         80        46       Kyle    Naughton            52   3.0   \n",
+      "285  286          4        42     Robert      Elliot            42   1.0   \n",
+      "547  548         11        50      Oumar      Niasse            39   3.8   \n",
       "\n",
       "     element_type_def  element_type_fwd  element_type_gkp  element_type_mid  \\\n",
-      "308                 0                 0                 0                 1   \n",
-      "78                  1                 0                 0                 0   \n",
-      "75                  1                 0                 0                 0   \n",
-      "20                  1                 0                 0                 0   \n",
-      "354                 0                 0                 0                 1   \n",
-      "325                 0                 0                 0                 1   \n",
+      "351                 1                 0                 0                 0   \n",
+      "285                 0                 0                 1                 0   \n",
+      "547                 0                 1                 0                 0   \n",
       "\n",
       "     chosen  \n",
-      "308     1.0  \n",
-      "78      1.0  \n",
-      "75      1.0  \n",
-      "20      1.0  \n",
-      "354     1.0  \n",
-      "325     1.0  \n",
-      "395\n"
+      "351     1.0  \n",
+      "285     1.0  \n",
+      "547     1.0  \n",
+      "138\n",
+      "133\n"
      ]
     }
    ],
    "source": [
-    "df_chosen2  = doOptimizePlayers(df, 395, 0, 3, 3, 0)\n",
+    "df = df[df.id!=159]\n",
+    "df_chosen2  = doOptimizePlayers(df, 138, 1, 1, 0, 1)\n",
     "print df_chosen2\n",
-    "print df_chosen2.now_cost.sum()\n"
+    "print df_chosen2.now_cost.sum()\n",
+    "print df_chosen2.total_points.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 154,
    "metadata": {
     "collapsed": true,
     "scrolled": true
