--- a/AmesHousePricesPrediction/House Sales Prediction.ipynb
+++ b/AmesHousePricesPrediction/House Sales Prediction.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -58,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#for c in X: print c,\" \",X[c].isnull().sum()"
@@ -67,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#for c in X: print c,\" \",X[c].dtypes"
@@ -2774,7 +2780,9 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -2784,7 +2792,9 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def modelfitscore(model, X_train_train, y_train_train, X_train_test, y_train_test):\n",
@@ -2822,7 +2832,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -3076,7 +3088,9 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# specify parameters and distributions to sample from\n",
@@ -3166,7 +3180,9 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_test = X_test.fillna(0)"
@@ -3175,7 +3191,9 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#model5 = ensemble.RandomForestRegressor( n_estimators = 300, random_state = 0, max_features = 3, min_samples_split = 2, bootstrap = False, max_depth = None, min_samples_leaf = 2)\n",
